@@ -2,12 +2,14 @@ Revision history for perl distribution App-proxyforurl
 
 0.13 Not Released
  - Fix demo link in documentation
+ - Add support for PROXYFORURL_BRAND_NAME
+ - Add support for PROXYFORURL_BRAND_URL
+ - Add support for PROXYFORURL_TEMPLATES
+ - Add support for PROXYFORURL_X_REQUEST_BASE
  - Changed GET /gethostbyname to POST /v1/gethostbyname
  - Changed GET /within to POST /v1/is-in-net
  - Changed default style to https://picocss.com
  - Rewrote JavaScript
- - Add support for PROXYFORURL_X_REQUEST_BASE
- - Add support for PROXYFORURL_TEMPLATES
 
 0.12 2021-12-14T19:16:57+0900
  - Fix correct quotes for pure-min.css
